<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Music</string>
    <string name="album_art">Album Art</string>
    <string name="artist_fetch_url" translatable="false">http://ws.audioscrobbler.com/2.0/?method=artist.getinfo</string>
    <string name="api" translatable="false">911da172e486f9339ebc82b65ee89993</string>
    <string name="artist_image">Artist Image</string>
    <string name="default_duration">00:00</string>

    <!-- Navigation -->
    <string name="playlist">Playlist</string>
    <string name="songs">Songs</string>
    <string name="albums">Albums</string>
    <string name="artist">Artists</string>
    <string name="about">About</string>

    <!-- Shortcuts -->
    <string name="view_library_short">Library</string>
    <string name="view_library_long">View library</string>
    <string name="search_library_long">Search library</string>

    <!-- Actions -->
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="done">Done</string>
    <string name="play">Play</string>
    <string name="menu_playlist_delete">Delete</string>
    <string name="menu_playlist_rename">Rename</string>
    <string name="previous">Previous</string>
    <string name="next">Next</string>
    <string name="menu">Menu</string>
    <string name="repeat">Repeat</string>
    <string name="rewind">Rewind</string>
    <string name="fast_forward">Fast Forward</string>
    <string name="shuffle">Shuffle</string>
    <string name="menu_play_next">Play next</string>
    <string name="menu_add_playing">Add to playing queue</string>
    <string name="menu_remove_playing">Remove from playing queue</string>
    <string name="menu_delete">Delete from device</string>
    <string name="menu_share">Share</string>
    <string name="play_all">Play all</string>
    <string name="search">Search</string>
    <string name="add_playlist">Create playlist</string>

    <!-- Playlist strings -->
    <string name="rename_playlist">Rename playlist</string>
    <string name="playlist_example">e.g. Favourites</string>
    <string name="playlist_name_empty_warning">Playlist name cannot be empty</string>
    <string name="create_new_playlist">Create playlist</string>
    <string name="add_to_playlist">Add songs to playlist</string>
    <string name="menu_add_playlist">Add to playlist</string>
    <string name="menu_remove_playlist">Remove from playlist</string>

    <!-- PlaylistAdapter -->
    <string name="ok">OK</string>

    <!-- PlaylistActivityAdapter -->
    <string name="share_song">Share song</string>
    <string name="song_delete_success">Song deleted</string>
    <string name="song_delete_fail">Failed to delete song</string>

    <!-- About screen -->
    <string name="about_text">Music player based on an older version of @architjn\'s Auro, before everything got broken.</string>

    <!-- MusicService -->
    <string name="service_generate_list_warning">The service has not yet built a list of your songs</string>
    <string name="nothing_to_play">Nothing to play</string>
    <string name="file_invalid">File invalid</string>
    <string name="unable_gain_focus">Unable to gain audio focus</string>

    <!-- List strings -->
    <string name="album">Album</string>
    <string name="song">Song</string>
    <string name="no_songs">No songs found!</string>
    <string name="no_albums">No albums found!</string>
    <string name="no_artists">No artists found!</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>

</resources>
