<?xml version="1.0" encoding="utf-8"?>
<shortcuts
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <shortcut
        android:shortcutId="viewLibrary"
        android:enabled="true"
        android:icon="@drawable/ic_library_music_color"
        android:shortcutShortLabel="@string/view_library_short"
        android:shortcutLongLabel="@string/view_library_long"
        tools:ignore="UnusedAttribute">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetPackage="com.dominionos.music"
            android:targetClass="com.dominionos.music.ui.layouts.activity.MainActivity" />
    </shortcut>
    <shortcut
        android:shortcutId="searchLibrary"
        android:enabled="true"
        android:icon="@drawable/ic_search_color"
        android:shortcutShortLabel="@string/search_library_short"
        android:shortcutLongLabel="@string/search_library_long"
        tools:ignore="UnusedAttribute">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetPackage="com.dominionos.music"
            android:targetClass="com.dominionos.music.ui.layouts.activity.SearchActivity" />
    </shortcut>
</shortcuts>