<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/noti_color_bg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/noti_album_art"
        android:layout_alignStart="@+id/noti_album_art"
        android:layout_alignEnd="@+id/noti_view_holder"
        android:layout_alignTop="@+id/noti_album_art"
        android:scaleType="fitXY"
        android:src="@color/noti_background"
        android:background="@android:color/transparent"
        android:clickable="true"
        android:drawSelectorOnTop="true"
        android:focusable="true"
        android:foreground="@drawable/unbounded_ripple"
        tools:ignore="ContentDescription" />

    <ImageView
        android:id="@+id/noti_album_art"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:scaleType="centerCrop"
        android:src="@drawable/default_artwork_dark"
        android:contentDescription="@string/album_art" />

    <RelativeLayout
        android:id="@+id/noti_view_holder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/noti_album_art"
        android:layout_alignTop="@+id/noti_album_art"
        android:layout_toEndOf="@+id/noti_album_art">

        <TextView
            android:id="@+id/noti_song_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="5dp"
            android:maxLines="1"
            android:text=""
            android:textColor="#fff"
            android:textSize="16sp"
            android:ellipsize="end" />

        <TextView
            android:id="@+id/noti_song_artist"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/noti_song_name"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:maxLines="1"
            android:text=""
            android:textColor="#c7c7c7"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/noti_song_album"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/noti_song_artist"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:maxLines="1"
            android:text=""
            android:textColor="#c7c7c7"
            android:textSize="12sp" />



        <LinearLayout
            android:id="@+id/noti_button_set"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/noti_prev_button"
                android:layout_width="wrap_content"
                android:layout_height="45dp"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:clickable="true"
                android:drawSelectorOnTop="true"
                android:focusable="true"
                android:foreground="@drawable/unbounded_ripple"
                android:paddingBottom="10dp"
                android:paddingTop="10dp"
                android:src="@drawable/ic_skip_previous"
                android:contentDescription="@string/previous" />

            <ImageButton
                android:id="@+id/noti_play_button"
                android:layout_width="wrap_content"
                android:layout_height="45dp"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:clickable="true"
                android:drawSelectorOnTop="true"
                android:focusable="true"
                android:foreground="@drawable/unbounded_ripple"
                android:src="@drawable/ic_pause"
                android:contentDescription="@string/play" />

            <ImageButton
                android:id="@+id/noti_next_button"
                android:layout_width="wrap_content"
                android:layout_height="45dp"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:clickable="true"
                android:drawSelectorOnTop="true"
                android:focusable="true"
                android:foreground="@drawable/unbounded_ripple"
                android:paddingBottom="10dp"
                android:paddingTop="10dp"
                android:src="@drawable/ic_skip_next"
                android:contentDescription="@string/next" />
        </LinearLayout>

    </RelativeLayout>

</RelativeLayout>